fixed spacing on about-me page

--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -10,7 +10,8 @@
   padding-bottom: 2.5%;
   box-shadow: 5px 5px 10px black;
   &__list {
-    list-style: none;
+    list-style-type: none;
+    padding-inline-start: 0;
     &-container {
       display: flex;
       flex-direction: column;
